<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inventory_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/inventory_text_primary"
        app:title="@string/add_item"
        app:titleTextColor="@color/inventory_text_primary" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.InventoryHub.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_md"
        android:hint="@string/search_for_item"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/items_control_height"
        android:layout_marginStart="@dimen/space_md"
        android:layout_marginEnd="@dimen/space_md"
        android:layout_marginBottom="@dimen/space_sm"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/inStockChip"
            style="@style/Widget.InventoryHub.Chip.Assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/in_stock"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/sortButton"
            android:layout_width="@dimen/items_control_height"
            android:layout_height="@dimen/items_control_height"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sort_items"
            android:src="@drawable/ic_sort"
            app:tint="@color/inventory_text_secondary" />
    </LinearLayout>

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_items_for_purchase_picker"
        android:textColor="@color/inventory_text_secondary"
        android:textSize="@dimen/text_size_body"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_stock_in_picker" />
</LinearLayout>
